--- a/meson_options.txt
+++ b/meson_options.txt
@@ -9,6 +9,7 @@ option('libarchive', type : 'boolean', value : true, description : 'enable libar
 option('gudev', type : 'boolean', value : true, description : 'enable GUdev support')
 option('gusb', type : 'boolean', value : true, description : 'enable GUsb support')
 option('bluez', type : 'boolean', value : false, description : 'enable BlueZ support')
+option('udisks', type : 'boolean', value : true, description : 'enable udisks support')
 option('polkit', type: 'boolean', value : true, description : 'enable PolKit support in daemon')
 option('gnutls', type: 'boolean', value : true, description : 'enable GnuTLS support')
 option('sqlite', type: 'boolean', value : true, description : 'enable sqlite support')
@@ -43,6 +44,7 @@ option('plugin_mtd', type : 'boolean', value : true, description : 'enable MTD s
 option('plugin_flashrom', type : 'boolean', value : false, description : 'enable libflashrom support')
 option('plugin_platform_integrity', type : 'boolean', value : false, description : 'enable platform integrity support')
 option('plugin_intel_spi', type : 'boolean', value : false, description : 'enable Intel SPI support')
+option('plugin_uf2', type : 'boolean', value : true, description : 'enable support for U2F')
 option('plugin_upower', type : 'boolean', value : true, description : 'enable support for UPower')
 option('plugin_powerd', type : 'boolean', value : true, description : 'enable support for powerd')
 option('qubes', type : 'boolean', value : false, description : 'build packages for Qubes OS')
