--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -70,6 +70,7 @@ subdir('uefi-capsule')
 subdir('uefi-dbx')
 subdir('uefi-pk')
 subdir('uefi-recovery')
+subdir('uf2')
 subdir('upower')
 subdir('usi-dock')
 subdir('vli')
