--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
                                   git
                                   gcc
                                   gcab
+                                  ca-certificates
                                   mingw32-nsis
                                   mingw64-brotli
                                   mingw64-gcc
