Allow patching firmware files at known offsets
This allows us to replace the 'dfu-tool replace' with a much more
controlled 'fwupdtool firmware-patch' command that patches at a set of
specific offsets.

Drop in the new functionality into the existing firmware ->write()
vfuncs so that the image headers, footers and/or checksums are correct.

--- a/data/bash-completion/fwupdtool.in
+++ b/data/bash-completion/fwupdtool.in
@@ -10,6 +10,7 @@ _fwupdtool_cmd_list=(
 	'firmware-extract'
 	'firmware-parse'
 	'firmware-sign'
+	'firmware-patch'
 	'get-updates'
 	'get-upgrades'
 	'get-details'
@@ -141,7 +142,7 @@ _fwupdtool()
 			_show_modifiers
 		fi
 		;;
-	firmware-parse)
+	firmware-parse|firmware-patch)
 		#find files
 		if [[ "$prev" = "$command" ]]; then
 			_filedir
