--- a/debian/control.in
+++ b/debian/control.in
@@ -5,7 +5,7 @@ Uploaders: Steve McIntyre <93sam@debian.org>,
            Matthias Klumpp <mak@debian.org>,
            Mario Limonciello <mario.limonciello@dell.com>
 Build-Depends:
-	fwupd-unsigned-dev,
+	fwupd-unsigned-dev [amd64 arm64 armhf i386],
         %%%DYNAMIC%%%
 Build-Depends-Indep: libglib2.0-doc <!nodoc>
 Standards-Version: 4.5.0
