--- a/debian/control.in
+++ b/debian/control.in
@@ -8,7 +8,8 @@ Build-Depends:
 	fwupd-unsigned-dev [amd64 arm64 armhf i386],
         %%%DYNAMIC%%%
 Build-Depends-Indep: libglib2.0-doc <!nodoc>
-Standards-Version: 4.5.0
+Rules-Requires-Root: no
+Standards-Version: 4.6.0.1
 Section: admin
 Homepage: https://github.com/fwupd/fwupd
 Vcs-Git: https://salsa.debian.org/efi-team/fwupd.git
