--- a/contrib/debian/control.in
+++ b/contrib/debian/control.in
@@ -6,7 +6,8 @@ Uploaders: Steve McIntyre <93sam@debian.org>,
            Mario Limonciello <superm1@gmail.com>
 Build-Depends: %%%DYNAMIC%%%
 Build-Depends-Indep: libglib2.0-doc <!nodoc>
-Standards-Version: 4.5.0
+Rules-Requires-Root: no
+Standards-Version: 4.6.0.1
 Section: admin
 Homepage: https://github.com/fwupd/fwupd
 Vcs-Git: https://salsa.debian.org/efi-team/fwupd.git
