--- a/contrib/debian/control.in
+++ b/contrib/debian/control.in
@@ -123,7 +123,7 @@ Depends: libfwupd2 (= ${binary:Version}),
          gir1.2-fwupd-2.0 (= ${binary:Version}),
          libcurl4-gnutls-dev,
          libglib2.0-dev (>= 2.45.8),
-         libjcat-dev,
+         libjcat-dev (>= 0.1.4),
          libjson-glib-dev (>= 1.1.1),
          ${misc:Depends}
 Breaks: fwupd-dev (<< 0.5.4-2~)
@@ -162,7 +162,7 @@ Depends: libfwupdplugin4 (= ${binary:Version}),
          libglib2.0-dev (>= 2.45.8),
          libgudev-1.0-dev,
          libgusb-dev (>= 0.3.5),
-         libjcat-dev,
+         libjcat-dev (>= 0.1.4),
          libjson-glib-dev (>= 1.1.1),
          libxmlb-dev (>= 0.1.13),
          valgrind [!ia64 !riscv64 !x32 !mips !sparc64 !sh4 !ppc64 !powerpcspe !hppa !alpha !mips64el !armhf !armel !mipsel !m68k],
