--- a/meson_options.txt
+++ b/meson_options.txt
@@ -34,7 +34,7 @@ option('plugin_synaptics_rmi', type: 'boolean', value: true, description : 'enab
 option('plugin_scsi', type: 'boolean', value: true, description : 'enable SCSI support')
 option('plugin_tpm', type : 'boolean', value : true, description : 'enable TPM support')
 option('plugin_thunderbolt', type : 'boolean', value : true, description : 'enable Thunderbolt support')
-option('plugin_redfish', type : 'boolean', value : true, description : 'enable Redfish support')
+option('plugin_redfish', type : 'feature' , description : 'Redfish support')
 option('plugin_uefi_capsule', type : 'boolean', value : true, description : 'enable UEFI capsule support')
 option('plugin_uefi_capsule_splash', type : 'boolean', value : true, description : 'enable UEFI capsule splash support')
 option('plugin_uefi_pk', type : 'boolean', value : true, description : 'enable UEFI PK support')
@@ -55,7 +55,7 @@ option('systemd_root_prefix', type: 'string', value: '', description: 'Directory
 option('elogind', type : 'boolean', value : false, description : 'enable elogind support')
 option('tests', type : 'boolean', value : true, description : 'enable tests')
 option('soup_session_compat', type : 'boolean', value : true, description : 'enable SoupSession runtime compatibility support')
-option('curl', type : 'boolean', value : true, description : 'enable libcurl support')
+option('curl', type : 'feature', description : 'libcurl support')
 option('udevdir', type: 'string', value: '', description: 'Directory for udev rules')
 option('efi_os_dir', type: 'string', description : 'the hardcoded name of OS directory in ESP, e.g. fedora')
 option('efi_binary', type: 'boolean', value : true, description : 'generate uefi binary if missing')
