--- a/meson_options.txt
+++ b/meson_options.txt
@@ -43,7 +43,7 @@ option('plugin_nvme', type : 'boolean', value : true, description : 'enable NVMe
 option('plugin_modem_manager', type : 'boolean', value : false, description : 'enable ModemManager support')
 option('plugin_msr', type : 'boolean', value : true, description : 'enable MSR support')
 option('plugin_mtd', type : 'boolean', value : true, description : 'enable MTD support')
-option('plugin_flashrom', type : 'boolean', value : false, description : 'enable libflashrom support')
+option('plugin_flashrom', type : 'feature', description : 'enable flashrom support')
 option('plugin_platform_integrity', type : 'boolean', value : false, description : 'enable platform integrity support')
 option('plugin_intel_spi', type : 'boolean', value : false, description : 'enable Intel SPI support')
 option('plugin_uf2', type : 'boolean', value : true, description : 'enable support for UF2')
