--- a/contrib/freebsd/Makefile
+++ b/contrib/freebsd/Makefile
@@ -44,7 +44,7 @@ MESON_ARGS=	-Dgudev=false \
 		-Dplugin_amt=false \
 		-Dplugin_dell=false \
 		-Dplugin_emmc=false \
-		-Dplugin_nvme=false \
+		-Dplugin_nvme=disabled \
 		-Dplugin_parade_lspcon=false \
 		-Dplugin_redfish=disabled \
 		-Dplugin_synaptics_mst=false \
