--- a/contrib/PKGBUILD
+++ b/contrib/PKGBUILD
@@ -28,9 +28,8 @@ build() {
         export CI="--wrap-mode=default"
     fi
     arch-meson -D b_lto=false $CI ../build \
-        -Dplugin_intel_spi=true \
+        -Dplugin_intel_spi=enabled \
         -Dplugin_powerd=false \
-        -Dlzma=true \
         -Ddocs=gtkdoc \
         -Defi_binary=false \
         -Dsupported_build=true
