--- a/meson_options.txt
+++ b/meson_options.txt
@@ -13,7 +13,7 @@ option('bluez', type : 'boolean', value : false, description : 'enable BlueZ sup
 option('polkit', type: 'boolean', value : true, description : 'enable PolKit support in daemon')
 option('gnutls', type: 'boolean', value : true, description : 'enable GnuTLS support')
 option('sqlite', type: 'boolean', value : true, description : 'enable sqlite support')
-option('lzma', type: 'boolean', value : false, description : 'enable LZMA support')
+option('lzma', type: 'feature', description : 'enable LZMA support')
 option('plugin_amt', type : 'boolean', value : true, description : 'enable Intel AMT support')
 option('plugin_acpi_phat', type : 'boolean', value : true, description : 'enable ACPI PHAT support')
 option('plugin_bcm57xx', type : 'boolean', value : true, description : 'enable BCM57xx support')
@@ -45,7 +45,7 @@ option('plugin_msr', type : 'boolean', value : true, description : 'enable MSR s
 option('plugin_mtd', type : 'boolean', value : true, description : 'enable MTD support')
 option('plugin_flashrom', type : 'feature', description : 'enable flashrom support')
 option('plugin_platform_integrity', type : 'boolean', value : false, description : 'enable platform integrity support')
-option('plugin_intel_spi', type : 'boolean', value : false, description : 'enable Intel SPI support')
+option('plugin_intel_spi', type : 'boolean', value: false, description : 'enable Intel SPI support')
 option('plugin_uf2', type : 'boolean', value : true, description : 'enable support for UF2')
 option('plugin_upower', type : 'boolean', value : true, description : 'enable support for UPower')
 option('plugin_powerd', type : 'boolean', value : true, description : 'enable support for powerd')
