--- a/meson_options.txt
+++ b/meson_options.txt
@@ -19,7 +19,7 @@ option('plugin_acpi_phat', type : 'boolean', value : true, description : 'enable
 option('plugin_bcm57xx', type : 'boolean', value : true, description : 'enable BCM57xx support')
 option('plugin_cfu', type : 'boolean', value : false, description : 'enable CFU support')
 option('plugin_cpu', type : 'boolean', value : true, description : 'enable CPU support')
-option('plugin_dell', type : 'boolean', value : true, description : 'enable Dell-specific support')
+option('plugin_dell', type : 'feature', description : 'enable Dell-specific support')
 option('plugin_dummy', type : 'boolean', value : false, description : 'enable the dummy device')
 option('plugin_emmc', type : 'boolean', value : true, description : 'enable eMMC support')
 option('plugin_ep963x', type : 'boolean', value : true, description : 'enable EP963x support')
@@ -32,7 +32,7 @@ option('plugin_realtek_mst', type : 'boolean', value : true, description : 'enab
 option('plugin_synaptics_mst', type: 'boolean', value: true, description : 'enable Synaptics MST hub support')
 option('plugin_synaptics_rmi', type: 'boolean', value: true, description : 'enable Synaptics RMI support')
 option('plugin_scsi', type: 'boolean', value: true, description : 'enable SCSI support')
-option('plugin_tpm', type : 'boolean', value : true, description : 'enable TPM support')
+option('plugin_tpm', type : 'feature', description : 'TPM support')
 option('plugin_thunderbolt', type : 'boolean', value : true, description : 'enable Thunderbolt support')
 option('plugin_redfish', type : 'feature' , description : 'Redfish support')
 option('plugin_uefi_capsule', type : 'boolean', value : true, description : 'enable UEFI capsule support')
