--- a/plugins/tpm/meson.build
+++ b/plugins/tpm/meson.build
@@ -1,7 +1,7 @@
-if get_option('hsi') and get_option('plugin_tpm')
-if not get_option('gudev')
-  error('gudev is required for tpm')
-endif
+gudev_tpm = dependency('gudev-1.0', version : '>= 232', required: get_option('plugin_tpm'))
+tpm2tss_tpm = dependency('tss2-esys', version : '>= 2.0', required: get_option('plugin_tpm'))
+
+if get_option('hsi') and gudev_tpm.found() and tpm2tss_tpm.found()
 cargs = ['-DG_LOG_DOMAIN="FuPluginTpm"']
 
 install_data([
@@ -34,7 +34,7 @@ plugin_tpm = shared_module('fu_plugin_tpm',
   c_args : cargs,
   dependencies : [
     plugin_deps,
-    tpm2tss,
+    tpm2tss_tpm,
   ],
 )
 
@@ -61,7 +61,7 @@ if get_option('tests')
     ],
     dependencies : [
       plugin_deps,
-      tpm2tss,
+      tpm2tss_tpm,
     ],
     link_with : [
       fwupd,
@@ -87,7 +87,7 @@ executable(
   ],
   dependencies : [
       plugin_deps,
-      tpm2tss,
+      tpm2tss_tpm,
   ],
   link_with : [
     fwupd,
