--- a/meson_options.txt
+++ b/meson_options.txt
@@ -10,7 +10,7 @@ option('libarchive', type : 'boolean', value : true, description : 'enable libar
 option('gudev', type : 'boolean', value : true, description : 'enable GUdev support')
 option('gusb', type : 'boolean', value : true, description : 'enable GUsb support')
 option('bluez', type : 'boolean', value : false, description : 'enable BlueZ support')
-option('polkit', type: 'boolean', value : true, description : 'enable PolKit support in daemon')
+option('polkit', type: 'feature', description : 'PolKit support in daemon')
 option('gnutls', type: 'boolean', value : true, description : 'enable GnuTLS support')
 option('sqlite', type: 'boolean', value : true, description : 'enable sqlite support')
 option('lzma', type: 'feature', description : 'enable LZMA support')
