--- a/meson_options.txt
+++ b/meson_options.txt
@@ -11,7 +11,7 @@ option('gudev', type : 'boolean', value : true, description : 'enable GUdev supp
 option('gusb', type : 'boolean', value : true, description : 'enable GUsb support')
 option('bluez', type : 'boolean', value : false, description : 'enable BlueZ support')
 option('polkit', type: 'feature', description : 'PolKit support in daemon')
-option('gnutls', type: 'boolean', value : true, description : 'enable GnuTLS support')
+option('gnutls', type: 'feature', description : 'GnuTLS support')
 option('sqlite', type: 'boolean', value : true, description : 'enable sqlite support')
 option('lzma', type: 'feature', description : 'enable LZMA support')
 option('plugin_amt', type : 'boolean', value : true, description : 'enable Intel AMT support')
