--- a/meson_options.txt
+++ b/meson_options.txt
@@ -6,13 +6,13 @@ option('docs', type : 'combo', choices : ['none', 'gtkdoc', 'docgen'], value : '
 option('introspection', type : 'boolean', value : true, description : 'generate GObject Introspection data')
 option('lvfs', type : 'combo', choices : ['true', 'false', 'disabled'], value : 'true', description : 'install LVFS remotes')
 option('man', type : 'boolean', value : true, description : 'enable man pages')
-option('libarchive', type : 'boolean', value : true, description : 'enable libarchive support')
+option('libarchive', type : 'feature', description : 'libarchive support')
 option('gudev', type : 'boolean', value : true, description : 'enable GUdev support')
 option('gusb', type : 'boolean', value : true, description : 'enable GUsb support')
 option('bluez', type : 'boolean', value : false, description : 'enable BlueZ support')
 option('polkit', type: 'feature', description : 'PolKit support in daemon')
 option('gnutls', type: 'feature', description : 'GnuTLS support')
-option('sqlite', type: 'boolean', value : true, description : 'enable sqlite support')
+option('sqlite', type: 'feature', description : 'sqlite support')
 option('lzma', type: 'feature', description : 'enable LZMA support')
 option('plugin_amt', type : 'boolean', value : true, description : 'enable Intel AMT support')
 option('plugin_acpi_phat', type : 'boolean', value : true, description : 'enable ACPI PHAT support')
