--- a/meson_options.txt
+++ b/meson_options.txt
@@ -8,7 +8,7 @@ option('lvfs', type : 'combo', choices : ['true', 'false', 'disabled'], value : 
 option('man', type : 'boolean', value : true, description : 'enable man pages')
 option('libarchive', type : 'feature', description : 'libarchive support')
 option('gudev', type : 'boolean', value : true, description : 'enable GUdev support')
-option('gusb', type : 'boolean', value : true, description : 'enable GUsb support')
+option('gusb', type : 'feature', description : 'GUsb support')
 option('bluez', type : 'boolean', value : false, description : 'enable BlueZ support')
 option('polkit', type: 'feature', description : 'PolKit support in daemon')
 option('gnutls', type: 'feature', description : 'GnuTLS support')
