--- a/plugins/dell/meson.build
+++ b/plugins/dell/meson.build
@@ -1,8 +1,8 @@
 tpm2tss_dell = dependency('tss2-esys', version : '>= 2.0', required: get_option('plugin_dell'))
 libsmbios_c = dependency('libsmbios_c', version : '>= 2.4.0', required: get_option('plugin_dell'))
 
-if get_option('plugin_dell').enabled() and not get_option('plugin_uefi_capsule')
-    error('plugin_dell is force-enabled but plugin_uefi_capsule is false, these options are incompatible')
+if get_option('plugin_dell').enabled() and get_option('plugin_uefi_capsule').disabled()
+    error('plugin_dell is force-enabled but plugin_uefi_capsule is disabled, these options are incompatible')
 elif tpm2tss_dell.found() and libsmbios_c.found()
 
 cargs = ['-DG_LOG_DOMAIN="FuPluginDell"']
