--- a/plugins/uefi-dbx/meson.build
+++ b/plugins/uefi-dbx/meson.build
@@ -1,4 +1,4 @@
-if get_option('plugin_uefi_capsule')
+if not get_option('plugin_uefi_capsule').disabled()
 cargs = ['-DG_LOG_DOMAIN="FuPluginUefiDbx"']
 
 shared_module('fu_plugin_uefi_dbx',
