trivial: disentangle gudev from various plugins by making meson tristate option

--- a/contrib/freebsd/Makefile
+++ b/contrib/freebsd/Makefile
@@ -40,7 +40,7 @@ USE_LDCONFIG=	yes
 
 SHEBANG_GLOB=	*.py
 
-MESON_ARGS=	-Dgudev=false \
+MESON_ARGS=	-Dgudev=disabled \
 		-Dplugin_amt=false \
 		-Dplugin_dell=disabled \
 		-Dplugin_emmc=false \
