--- a/plugins/nvme/meson.build
+++ b/plugins/nvme/meson.build
@@ -1,6 +1,6 @@
-gudev_nvme = dependency('gudev-1.0', version : '>= 232', required: get_option('plugin_nvme'))
+nvme_header = cc.has_header('linux/nvme_ioctl.h', required: get_option('plugin_nvme'))
 
-if gudev_nvme.found()
+if nvme_header and gudev.found()
 cargs = ['-DG_LOG_DOMAIN="FuPluginNvme"']
 
 install_data([
