--- a/plugins/parade-lspcon/meson.build
+++ b/plugins/parade-lspcon/meson.build
@@ -1,6 +1,6 @@
-if get_option('plugin_parade_lspcon')
-
-if not get_option('gudev')
+if get_option('plugin_parade_lspcon') and gudev.found()
+# TODO when upgrading to meson 0.59 as baseline use require()
+if not gudev.found()
   error('gudev is required for plugin_parade_lspcon')
 endif
 
