--- a/meson_options.txt
+++ b/meson_options.txt
@@ -7,7 +7,7 @@ option('introspection', type : 'boolean', value : true, description : 'generate 
 option('lvfs', type : 'combo', choices : ['true', 'false', 'disabled'], value : 'true', description : 'install LVFS remotes')
 option('man', type : 'boolean', value : true, description : 'enable man pages')
 option('libarchive', type : 'feature', description : 'libarchive support')
-option('gudev', type : 'boolean', value : true, description : 'enable GUdev support')
+option('gudev', type : 'feature', description : 'GUdev support')
 option('gusb', type : 'feature', description : 'GUsb support')
 option('bluez', type : 'boolean', value : false, description : 'enable BlueZ support')
 option('polkit', type: 'feature', description : 'PolKit support in daemon')
