--- a/plugins/gpio/meson.build
+++ b/plugins/gpio/meson.build
@@ -1,7 +1,6 @@
 gpio_header = cc.has_header_symbol('linux/gpio.h', 'GPIO_V2_LINE_FLAG_OUTPUT', required: get_option('plugin_gpio'))
-gudev_gpio = dependency('gudev-1.0', version : '>= 232', required: get_option('plugin_gpio'))
 
-if gpio_header and gudev_gpio.found()
+if gpio_header and gudev.found()
 cargs = ['-DG_LOG_DOMAIN="FuPluginGpio"']
 
 install_data([
