--- a/plugins/uf2/meson.build
+++ b/plugins/uf2/meson.build
@@ -1,8 +1,12 @@
-if get_option('plugin_uf2') and host_machine.system() == 'linux'
-if not gusb.found()
-  error('gusb is required for plugin_uf2')
-endif
+if get_option('plugin_uf2')
 
+# TODO when upgrading to meson 0.59 as baseline use require()
+if not gudev.found()
+  error('gudev is required for plugin_uf2')
+endif
+if host_machine.system() != 'linux'
+  error('plugin_uf2 is only supported on Linux')
+endif
 cargs = ['-DG_LOG_DOMAIN="FuPluginUf2"']
 
 install_data(['uf2.quirk'],
