--- a/plugins/intel-spi/meson.build
+++ b/plugins/intel-spi/meson.build
@@ -1,6 +1,8 @@
 lzma_intel_spi = dependency('liblzma', required: get_option('plugin_intel_spi'))
 
-if lzma_intel_spi.found() and host_machine.system() == 'linux'
+if lzma_intel_spi.found() and \
+   host_machine.system() == 'linux' and \
+   (host_cpu == 'x86' or host_cpu == 'x86_64')
 cargs = ['-DG_LOG_DOMAIN="FuPluginIntelSpi"']
 
 install_data(['intel-spi.quirk'],
