--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -35,9 +35,9 @@ else
 endif
 
 ifneq ($(filter $(DEB_HOST_ARCH_CPU),i386 amd64),)
-	CONFARGS += -Dplugin_msr=true
+	CONFARGS += -Dplugin_msr=enabled
 else
-	CONFARGS += -Dplugin_msr=false
+	CONFARGS += -Dplugin_msr=disabled
 endif
 
 ifneq ($(QUBES_OPTION),)
