--- a/meson_options.txt
+++ b/meson_options.txt
@@ -41,7 +41,7 @@ option('plugin_uefi_pk', type : 'boolean', value : true, description : 'enable U
 option('plugin_nitrokey', type : 'boolean', value : true, description : 'enable Nitrokey support')
 option('plugin_nvme', type : 'feature', description : 'enable NVMe support')
 option('plugin_modem_manager', type : 'feature', description : 'ModemManager support')
-option('plugin_msr', type : 'boolean', value : true, description : 'enable MSR support')
+option('plugin_msr', type : 'feature', description : 'MSR support')
 option('plugin_mtd', type : 'boolean', value : true, description : 'enable MTD support')
 option('plugin_flashrom', type : 'feature', description : 'enable flashrom support')
 option('plugin_platform_integrity', type : 'boolean', value : false, description : 'enable platform integrity support')
